--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "dropzone": "^5.5.1",
     "passport": "^0.4.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
