--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,13 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "fs": "0.0.1-security",
+    "mkdirp": "^0.5.1",
     "mongoose": "^5.0.2",
     "morgan": "^1.9.0",
-    "nodemon": "^1.14.11"
+    "multer": "^1.4.1",
+    "nodemon": "^1.14.11",
+    "path": "^0.12.7",
+    "uuid": "^3.3.2"
   }
 }
