--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@celdotro/vue-simplepagination": "^1.3.2",
     "axios": "^0.17.1",
     "dropzone": "^5.5.1",
     "passport": "^0.4.0",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue": "^2.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
